# thekoder

./: .clang-format  .gitignore  CMakeLists.txt  d\  heaptrack.pngreader.9320.zst  main.cpp
cmake/: fetch.cmake  gtestFetch.cmake  sdl3Fetch.cmake  zlibFetch.cmake
examples/: bmp.cpp  png.cpp
src/: logger.hpp  main.cpp  utils.cpp  utils.hpp
src/codecs/: CMakeLists.txt
src/codecs/base/: CMakeLists.txt  codec.cpp
src/codecs/base/include/: codec.hpp  colors.hpp
src/codecs/bmp/: CMakeLists.txt  bmp_codec.cpp  chunks.cpp
src/codecs/bmp/include/: bmp.hpp  bmp_codec.hpp  chunks.hpp  constants.hpp  enums.hpp  utils.h
src/codecs/gif/: CMakeLists.txt  gif_codec.cpp
src/codecs/gif/include/: chunks.hpp  gif_codec.hpp
src/codecs/png/: CMakeLists.txt  png_codec.cpp
src/codecs/png/include/: chunks.hpp  constants.hpp  png.hpp  png_codec.hpp
src/codecs/png/src/: png_codec.cpp
src/codecs/wav/: CMakeLists.txt  wav_codec.cpp
src/codecs/wav/include/: wav_codec.hpp
src/codecs/wav/include/wav/: chunks.hpp  enums.hpp  wav_codec.hpp
src/logger/: CMakeLists.txt
src/logger/include/: logger.hpp
src/logger/src/: logger.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: reading_value.hpp
test/: CMakeLists.txt  main.cpp
test/codecs/png/: png_test.cpp
test/codecs/wav/: wav_chunks_test.cpp  wav_test.cpp
